# go2-mujoco-artefacts

./: .artefactsignore  .dockerignore  .gitignore  Dockerfile  Dockerfile.base  README.md  artefacts.yaml  dds_config.xml  go2_fixed_urdf.urdf  go2_rails_demo.py  go2_wtw_async.py  go2_wtw_demo.py  headless_bridge.py  pixi.toml  pyproject.toml  rail_gen.py  record_joints.py  requirements.txt  rerun_template.rbl  run_high.md  utils.py
go2_mujoco_artefacts/: camera_utils.py  defaults.py  injected_sport_go2_sim.py  mesh_utils.py  proc_utils.py  sensor_utils.py  simple_sport_go2_sim.py  wtw_controller.py
resources/: go2.xml  scene_flat.xml  scene_rail_track.xml
resources/model/: meshId0.mtl  meshId1.mtl  scene.urdf
scripts/: fetch_wtw_checkpoints.sh  fix__init__.py  fix_unitree_sdk2_for_pixi.sh
tests/: test_demo.py
typings/: README.md
typings/mujoco/: __init__.pyi  cgl.pyi  gl_context.pyi  viewer.pyi
typings/mujoco/rendering/classic/: __init__.pyi  renderer.pyi
